CHANGELOG

2.5.1 - 2015-10-12
  * FIX: the AlgoliaSearchHelper.getFacetsStats was not returning the stats
  if the attribute was both a regular & disjunctive facet.

2.5.0 - 2015-10-09
  * CHORE : Update qs to 5.2.0
  * FEATURE : getStateAsQueryString now orders the serialized parameters
  * FIX : IE8 has no array indexof


2.4.0 - 2015-09-23
  * FEATURE : add AlgoliaSearchHelper.getState(filters) to get a filtered state
  * FEATURE : add AlgoliaSearchHelper.getStateAsQueryString to get a part of
  the state as a queryString
  * FEATURE : add AlgoliaSearchHelper.setStateFromQueryString to set the state
  of the helper with a query string
  * FEATURE : add AlgoliaSearchHelper.getConfigurationFromQueryString. Reads
  a query string and returns the associated partial helper configuration
  * FEATURE : add AlgoliaSearchHelper.getForeignConfigurationInQueryString to
  get the configuration contained in a qs that is not from the helper
  * FIX : all the properties that are supposed to be numbers are now parsed in
  the SearchParameters

2.3.6 - 2015-09-17
  * CHORE: technical release, move all deps to ^version and add a shrinkwrap to allow reproducible builds

2.3.5 - 2015-09-12
  * FIX: getFacetStats should look into facets and disjunctiveFacets

2.3.4 - 2015-09-11
  * FIX: #208, getFacetValues should return an empty array if the facet is
  defined but there are no returned values for it (and not throw an exception)
  * CHORE : drop tests on iojs
  * CHORE : travis now requires us to install if missing node env

2.3.3 - 2015-09-09
  * FIX: hasRefinements fix, should check facet, disjunctive, hierarchical, numeric

2.3.2 - 2015-09-03
  * FIX: allow passing the `length` parameter, fix `searchParameters` iteration

2.3.1 - 2015-09-02
  * CHORE: add a console.error() when passing unknown parameters
  * FIX: add offset/length undocumented search parameters

2.3.0 - 2015-09-02
  * FEATURE: #136, fire a 'search' event once a search is sent to Algolia